--- a/index.html
+++ b/index.html
@@ -147,5 +147,8 @@
             <p class="copyright">© 2026 Hakodate Aquarium. All rights reserved.</p>
         </footer>
     </body>
+    <script async src="http://127.0.0.1:5000/widget/widget.js" data-bot-key="pk_x6NFaZv0cqnjIgoZ1Otzpxsxzm86lrcK"
+        data-api-base="http://127.0.0.1:5000">
+        </script>
 
 </html>
