--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
             <p class="copyright">© 2026 Hakodate Aquarium. All rights reserved.</p>
         </footer>
     </body>
-    <script async src="http://127.0.0.1:5000/widget/widget.js" data-bot-key="pk_4QdW2l_Jwl4eWMOZu5h2Z4rXWEWExnUB"
-        data-api-base="http://127.0.0.1:5000">
-        </script>
+    <script src="http://127.0.0.1:5000/widget/widget.js" data-bot-key="pk_Nim3YozmYk90I5olJf6k_xH-ntdHEtaK"
+        data-api-base="http://127.0.0.1:5000" defer></script>
 
 </html>
