--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="copyright">© 2026 Hakodate Aquarium. All rights reserved.</p>
         </footer>
     </body>
-    <script async src="http://127.0.0.1:5000/widget/widget.js" data-bot-key="pk_vxpC-2ME5t7wZsK4W3pQsK4EiY2onraZ"
-        data-api-base="http://127.0.0.1:5000"></script>
+    <script async src="http://localhost:5000/widget/widget.js" data-bot-key="pk_mJqfmky5883R3XnjPJeCkeB0nwvvsyQ8"
+        data-api-base="http://localhost:5000"></script>
 
 </html>
