--- a/events.html
+++ b/events.html
@@ -18,6 +18,7 @@
                     <a href="events.html">Events</a>
                     <a href="animals.html">Animals</a>
                     <a href="access.html">Access</a>
+                    <a href="booking.html">Booking</a>
                 </nav>
             </div>
         </header>
