--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <a href="events.html">Events</a>
                     <a href="animals.html">Animals</a>
                     <a href="access.html">Access</a>
+                    <a href="booking.html">Booking</a>
                 </nav>
             </div>
         </header>
@@ -147,7 +148,7 @@
             <p class="copyright">© 2026 Hakodate Aquarium. All rights reserved.</p>
         </footer>
     </body>
-    <script async src="http://localhost:5000/widget/widget.js" data-bot-key="pk_fvsFVLJzJGk98WfRxywYuTtpH_dV08fJ"
+    <script async src="http://localhost:5000/widget/widget.js" data-bot-key="pk_psjAq99Br25oHOv7IgwpixiQy38BNJDs"
         data-api-base="http://localhost:5000"></script>
 
 </html>
