--- a/access.html
+++ b/access.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Access | Hakodate Aquarium</title>
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
+
   <body>
     <header class="site-header">
       <div class="container header-inner">
@@ -16,6 +18,7 @@
           <a href="events.html">Events</a>
           <a href="animals.html">Animals</a>
           <a href="access.html">Access</a>
+          <a href="booking.html">Booking</a>
         </nav>
       </div>
     </header>
@@ -103,4 +106,5 @@
       <p class="copyright">© 2026 Hakodate Aquarium. All rights reserved.</p>
     </footer>
   </body>
+
 </html>
