Sample events added

--- a/events.html
+++ b/events.html
@@ -68,10 +68,93 @@
                         </p>
                         <p class="muted">Feb 14, 2026</p>
                     </article>
+                    <article class="card">
+                        <h2>Sakura Aquarium</h2>
+                        <p>
+                            Spring-only light show with cherry blossom projections across the
+                            jellyfish tanks and dolphin pool. Pink ambient lighting and
+                            Japanese instrumental music create a seasonal atmosphere.
+                        </p>
+                        <p class="muted">Mar 1 – Apr 15, 2026</p>
+                    </article>
+                    <article class="card">
+                        <h2>Spring Festival Weekend</h2>
+                        <p>
+                            Special weekend programs including extended dolphin shows, craft
+                            workshops for kids, and guided tours through the reef exhibits.
+                            Food stalls and photo spots available.
+                        </p>
+                        <p class="muted">Mar 15 – 16, 2026</p>
+                    </article>
+                    <article class="card">
+                        <h2>World Water Day</h2>
+                        <p>
+                            Educational programs on ocean conservation, guest talks by marine
+                            researchers, and interactive displays about freshwater and marine
+                            ecosystems.
+                        </p>
+                        <p class="muted">Mar 22, 2026</p>
+                    </article>
+                    <article class="card">
+                        <h2>Earth Week at the Aquarium</h2>
+                        <p>
+                            Week-long celebration of Earth Day with eco-themed exhibitions,
+                            recycling workshops, and special screenings about coral
+                            preservation and sustainable fisheries.
+                        </p>
+                        <p class="muted">Apr 18 – 24, 2026</p>
+                    </article>
+                    <article class="card">
+                        <h2>Golden Week Family Special</h2>
+                        <p>
+                            Extra dolphin shows, face painting, and scavenger hunts for
+                            families. Extended hours during the holiday period.
+                        </p>
+                        <p class="muted">Apr 29 – May 6, 2026</p>
+                    </article>
                 </div>
             </section>
 
             <section class="section alt">
+                <div class="container">
+                    <h2>Special Discount Days</h2>
+                    <p class="muted">Valid on the dates below—present ID or proof where required.</p>
+                    <div class="grid three" style="margin-top: 1.5rem;">
+                        <div class="card">
+                            <h3>Ladies' Day</h3>
+                            <p>20% off for all female visitors.</p>
+                            <p class="muted">Every Wednesday in Mar & Apr</p>
+                        </div>
+                        <div class="card">
+                            <h3>Senior Discount</h3>
+                            <p>25% off for visitors 65+. ID required.</p>
+                            <p class="muted">Tuesdays: Mar 4, 11, 18, 25; Apr 1, 8, 15, 22</p>
+                        </div>
+                        <div class="card">
+                            <h3>Family Pack</h3>
+                            <p>2 adults + 2 kids for ¥5,500 (save ¥600).</p>
+                            <p class="muted">Saturdays: Mar 8, 22; Apr 5, 19</p>
+                        </div>
+                        <div class="card">
+                            <h3>Student Flash</h3>
+                            <p>30% off with valid student ID.</p>
+                            <p class="muted">Mar 13, 27; Apr 10, 24</p>
+                        </div>
+                        <div class="card">
+                            <h3>Early Bird</h3>
+                            <p>15% off for entry before 12:00.</p>
+                            <p class="muted">Mar 3–7, Apr 7–11 (weekdays only)</p>
+                        </div>
+                        <div class="card">
+                            <h3>Birthday Week</h3>
+                            <p>Free entry on your birth date. ID required.</p>
+                            <p class="muted">Valid any day in Mar & Apr</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section">
                 <div class="container grid two">
                     <div class="card">
                         <h3>Wonder Research</h3>
